...
                android:textSize="@dimen/search_edit_text_size"
                android:imeOptions="flagNoExtractUi"
                android:background="@drawable/rounded_back"
                android:textColorHint="@color/black_80"
                android:drawableLeft="@drawable/ic_search_small"
                android:drawablePadding="@dimen/search_drawable_padding"
                android:id="@+id/search_auto_complete"
                android:importantForAccessibility="yes"/>
        </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="@dimen/search_recycler_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/llSearchBar"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbarSize="2dp"
        android:fadeScrollbars="false"
        android:id="@+id/icon_search_recycler_view"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>
</RelativeLayout>

