...

    <string name="change_language_line2">Step 1: Select any language from the dropdown below:</string>
    <string name="simple_ime">Jellow Keyboard</string>
    <string name="subtype_en_US">Serial ABC</string>
    <string name="perform_db_update" translatable="false">com.dsource.idc.jellow.perform_db_update</string>

    <string name="action_bar_title">Home</string>
    <string name="txtSpeechSpeed">Speech Speed</string>
    <string name="txtVoiceSpeech">Voice Pitch</string>
    <string name="txtDisplayMode">Display Mode</string>
    <string name="txtVoiceVolume">Speech Volume</string>
    <string name="txtNumOfPerPerScr">Number of category icons per screen</string>
    <string name="txtDemo">SPEECH DEMO</string>
...
    <string name="search_parent_0" translatable="false">parent_0</string>
    <string name="search_parent_1" translatable="false">parent_1</string>
    <string name="search_parent_2" translatable="false">parent_2</string>
    <string name="home">Home</string>
    <string name="from_search" translatable="false">FROM_SEARCH</string>
    <string name="search_tag" translatable="false">SEARCH</string>
    <string name="icon_not_found">Icon not found</string>
    <string name="not_found" translatable="false">NOT_FOUND</string>
    <string name="goto_home" translatable="false">goto_home</string>


    <!--About Jellow strings-->
    <string name="info">General Information</string>
...
