...
        android:focusable="true"
        android:importantForAccessibility="yes">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_icon_title"
        android:textSize="@dimen/search_list_title_text_size"
        android:text="Query Result"
        android:textColor="@color/black_80"
        />
    <TextView
        android:layout_width="wrap_content"
...
